--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -3,6 +3,13 @@
 
 $grey: #f5f5f5
 
+body
+  user-select: none
+  -khtml-user-select: none
+  -o-user-select: none
+  -moz-user-select: -moz-none
+  -webkit-user-select: none
+
 .todo-list,
 .todo-stack-list
   margin-bottom: 40px
@@ -75,9 +82,14 @@ $grey: #f5f5f5
   padding: 20px 20px
   margin: 10px
   margin-bottom: 0
-  // background: #ddd
-  // border-radius: 10px
-  border: 1px solid #ccc
+  color: $white
+  background-color: $link
+  border-radius: 10px
+  // border: 1px solid #ccc
+  transition: 0.3s all ease-in-out
+
+  .no-transition
+    transition: none
 
 .slide-right-enter-active,
 .slide-right-leave-active,
