--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -9,7 +9,6 @@ body
   -o-user-select: none
   -moz-user-select: -moz-none
   -webkit-user-select: none
-  perspective: 100vw
 
 
 .todo-list,
@@ -80,6 +79,9 @@ body
   // border-radius: 10px
   border: 1px solid #ccc
 
+  &.perspective
+    perspective: 100vw
+
 .stack-todo-item
   padding: 20px 20px
   margin: 10px
@@ -91,7 +93,7 @@ body
   transition: 0.3s all ease-in-out
   outline: 1px solid transparent // for anti-aliasing
 
-  .no-transition
+  &.no-transition
     transition: none
 
 .slide-right-enter-active,
