--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -96,6 +96,9 @@ body
   &.no-transition
     transition: none
 
+  &.fast-transition
+    transition-duration: 0.1s
+
 .slide-right-enter-active,
 .slide-right-leave-active,
 .slide-left-enter-active,
