add actions on todo moves

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -39,6 +39,7 @@ body
 
 .todo-list-item
   display: flex
+  flex-direction: column
   justify-content: center
   align-items: center
   padding: 30px 20px
