--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -10,6 +10,11 @@ body
   -moz-user-select: -moz-none
   -webkit-user-select: none
 
+.q-toolbar__title
+  font-size: 16px
+
+.toolbar-avatar
+  // border: 2px solid #9e9e9e
 
 .todo-list,
 .todo-stack-list
