--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -16,8 +16,7 @@ body
 .toolbar-avatar
   // border: 2px solid #9e9e9e
 
-.todo-list,
-.todo-stack-list
+.todo-list
   margin-bottom: 40px
   background: #fff
   border-radius: 3px
@@ -74,9 +73,6 @@ body
 
 .stack-title
   padding: 10px
-
-.todo-stack-list
-  padding: 20px
 
 .todo-stack-item
   margin-bottom: 20px
