--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -22,6 +22,13 @@ body
 .toolbar-avatar
   // border: 2px solid #9e9e9e
 
+.q-page-sticky--shrink > div
+  display: flex
+  flex-direction: column
+
+  button
+    margin-top: 20px
+
 .todo-list
   margin-bottom: 40px
   background: #fff
