--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -99,9 +99,12 @@ body
   padding: 20px
   border-radius: 3px
   background: #f0f0f0
+  position: relative
+  z-index: 0
 
-  &.perspective
+  &.active-stack
     perspective: 150vw
+    z-index: 1
 
 .stack-todos
   position: relative
