--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -32,6 +32,9 @@ body
 .toolbar-avatar
   // border: 2px solid #9e9e9e
 
+.q-page-sticky
+  z-index: 1
+
 .q-page-sticky--shrink > div
   display: flex
   flex-direction: column
@@ -78,17 +81,45 @@ body
   justify-content: flex-end
 
 .todo-list-item
+  position: relative
   display: flex
-  flex-direction: column
+  flex-direction: row
   place-items: center
   padding: 30px 20px
+  padding-right: 5px
   margin-top: 10px
   margin-bottom: 10px
   border-radius: 5px
   background: linear-gradient(135deg, #f6d365 0%, #fda085 100%)
   box-shadow: rgba(0, 0, 0, 0.15) 0px 1px 2px 0px
 
+  .field:not(:last-child)
+    margin: 0
+    margin-right: 5px
+
+.todo-item-icon
+  position: absolute
+  top: 5px
+  left: 10px
+
+.todo-item-menu
+  min-width: 130px
+
+  .q-item
+    position: relative
+    display: flex
+    flex-direction: row
+    place-items: center
+
+  i
+    margin-right: 10px
+
+  .column
+    padding: 0
+
 .create-todo-list-item
+  padding-right: 20px
+
   input.input::placeholder
     color: #c9c9c9
 
