--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -140,6 +140,22 @@ body
 .stack-title
   margin-right: 10px
 
+.stack-bg
+  position: absolute
+  top: 0
+  left: 0
+  width: 100%
+  height: 100%
+  display: flex
+  flex-flow: column
+  place-items: center
+  z-index: 0
+  color: #f6d365
+
+.stack-bg-icon
+  display: block
+  font-size: 70px
+
 .stack-item
   margin-bottom: 20px
   padding: 20px
