hide firebase creds, create apk script, fab styling

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -42,6 +42,9 @@ body
   button
     margin-top: 20px
 
+.fab-container
+  transform-origin: bottom center
+
 .create-todo-list
   display: flex
   justify-content: center
