improve css version of todo stack, entry, out, swap animation

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -11,6 +11,9 @@ body
   -moz-user-select: -moz-none
   -webkit-user-select: none
 
+.invisible
+  opacity: 0
+
 .section
   padding: 1.5rem
 
@@ -44,6 +47,10 @@ body
 
 .fab-container
   transform-origin: bottom center
+
+  .second-fab
+    position: absolute
+    top: -70px
 
 .create-todo-list
   display: flex
