--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -11,8 +11,38 @@ body
   -moz-user-select: -moz-none
   -webkit-user-select: none
 
+html,
+body,
+#q-app,
+  height: 100%
+
+#q-app > .q-layout
+  height: calc(100% - 50px)
+
 .invisible
   opacity: 0
+
+.layout
+  position: relative
+  overflow: hidden
+
+.screen-section
+  position: absolute
+  top: 0
+  left: 0
+  width: 100%
+  height: 100%
+  overflow: auto
+  transform: translateX(0)
+
+  transition: transform 0.7s ease-in-out
+
+
+.editor-section:not(.active-section)
+  transform: translateX(-100%)
+
+.stacks-section:not(.active-section)
+  transform: translateX(100%)
 
 .section
   padding: 1.5rem
