--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -36,11 +36,14 @@ body,
   left: 0
   width: 100%
   height: 100%
-  overflow: auto
+  overflow-x: hidden
+  overflow-y: overlay
   transform: translateX(0)
 
   transition: transform 0.7s ease-in-out
 
+  &:not(.active-section)
+    overflow-y: hidden
 
 .editor-section:not(.active-section)
   transform: translateX(-100%)
@@ -208,11 +211,8 @@ body,
   background: $stack-background
   box-shadow: $stack-shadow
   position: relative
+  perspective: 150vw
   z-index: 0
-
-  &.active-stack
-    perspective: 150vw
-    z-index: 1
 
 .stack-todos
   position: relative
