--- a/src/css/todo-stack-animation.sass
+++ b/src/css/todo-stack-animation.sass
@@ -2,26 +2,39 @@
   0%
     transform: translate(-15%, -15%)
     opacity: 0
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 30px 0px
+  30%
+    opacity: 1
   100%
     transform: translateX(0) rotateY(0)
-    opacity: 1
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 1px 2px 0px
 
 @keyframes done
   0%
     transform: translateX(0) rotateY(0)
+  30%
+    transform: translateX(5%) scale(1.05)
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 30px 0px
+  70%
     opacity: 1
   100%
-    transform: translateX(70%) rotateY(70deg)
+    transform: translateX(100%) rotateY(20deg)
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 1px 2px 0px
     opacity: 0
 
 @keyframes undone
   0%
-    transform: translateX(70%) rotateY(70deg)
+    transform: translateX(100%) rotateY(20deg)
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 1px 2px 0px
     opacity: 0
-
+  30%
+    opacity: 1
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 30px 0px
+  70%
+    transform: translateX(5%) scale(1.05)
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 1px 2px 0px
   100%
     transform: translateX(0) rotateY(0)
-    opacity: 1
 
 @keyframes swap
   0%
@@ -29,7 +42,22 @@
     z-index: 1
 
   50%
-    transform: translateY(130%) rotateX(10deg)
+    transform: translateY(130%) rotateX(10deg) scale(1.02)
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 10px 20px 0px
+
+  100%
+    transform: translateY(5px) rotateX(0) scale(0.99)
+    z-index: auto
+
+
+@keyframes swap-up
+  0%
+    transform: translateY(0) rotateX(0)
+    z-index: 1
+
+  50%
+    transform: translateY(-110%) rotateX(-10deg) scale(1.02)
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 10px 20px 0px
 
   100%
     transform: translateY(5px) rotateX(0) scale(0.99)
@@ -38,13 +66,16 @@
 .stack-todo-item
 
   &.done
-    animation: done 0.5s ease-out
+    animation: done 0.7s cubic-bezier(0.55, 0.09, 0.68, 0.53) forwards
 
   &.undone
-    animation: undone 0.5s ease-out
+    animation: undone 0.7s cubic-bezier(0.39, 0.58, 0.57, 1)
 
   &.appear
-    animation: appear 0.5s ease-out
+    animation: appear 0.7s cubic-bezier(0.4, 0, 0.2, 1)
 
   &.swap
-    animation: swap 0.7s ease-in-out
+    animation: swap 0.7s cubic-bezier(0.4, 0, 0.2, 1)
+
+  &.swap-up
+    animation: swap-up 0.7s cubic-bezier(0.4, 0, 0.2, 1)
