--- a/src/css/todo-stack-animation.sass
+++ b/src/css/todo-stack-animation.sass
@@ -30,11 +30,11 @@
   30%
     opacity: 1
     box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 30px 0px
-  70%
-    transform: translateX(5%) scale(1.05)
-    box-shadow: rgba(0, 0, 0, 0.15) 0px 1px 2px 0px
+  60%
+    transform: translateX(4%) rotateY(0) scale(1.05)
   100%
     transform: translateX(0) rotateY(0)
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 1px 2px 0px
 
 @keyframes swap
   0%
@@ -66,7 +66,7 @@
     animation: done 0.7s cubic-bezier(0.55, 0.09, 0.68, 0.53) forwards
 
   &.undone
-    animation: undone 0.7s cubic-bezier(0.39, 0.58, 0.57, 1)
+    animation: undone 0.7s cubic-bezier(0.25, 0.46, 0.45, 0.94)
 
   &.appear
     animation: appear 0.7s cubic-bezier(0.4, 0, 0.2, 1)
