add transition to preloader, link preloader and todo transitions

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -212,7 +212,7 @@ body,
   background: $stack-background
   box-shadow: $stack-shadow
   position: relative
-  perspective: 150vw
+  // perspective: 150vw
   z-index: 0
 
 .stack-todos
