--- a/src/css/todo-stack-animation.sass
+++ b/src/css/todo-stack-animation.sass
@@ -2,7 +2,16 @@
   0%
     transform: translate(-15%, -15%)
     opacity: 0
-    box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 30px 0px
+  30%
+    opacity: 1
+  100%
+    transform: translateY(5px) rotateX(0) scale(0.99)
+
+@keyframes appear-current
+  0%
+    transform: translate(-15%, -15%)
+    opacity: 0
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 15px 30px 0px
   30%
     opacity: 1
   100%
@@ -63,13 +72,16 @@
 .stack-todo-item
 
   &.done
-    animation: done 0.7s cubic-bezier(0.55, 0.09, 0.68, 0.53) forwards
+    animation: done 0.4s cubic-bezier(0.55, 0.09, 0.68, 0.53) forwards
 
   &.undone
     animation: undone 0.7s cubic-bezier(0.25, 0.46, 0.45, 0.94)
 
   &.appear
     animation: appear 0.7s cubic-bezier(0.4, 0, 0.2, 1)
+
+  &.appear:last-child
+    animation: appear-current 0.7s cubic-bezier(0.4, 0, 0.2, 1)
 
   &.swap
     animation: swap 0.7s cubic-bezier(0.4, 0, 0.2, 1)
