--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -37,17 +37,15 @@ body,
   left: 0
   width: 100%
   height: 100%
-  overflow-x: hidden
-  overflow-y: overlay
   transform: translateX(0)
+  will-change: transform
+  overflow: auto
+  overflow-x: hidden
 
-  transition: transform 0.7s ease-in-out
-
-  &:not(.active-section)
-    overflow-y: hidden
+  transition: transform 0.5s cubic-bezier(0.465, 0.183, 0.153, 0.946)
 
 .editor-section:not(.active-section)
-  transform: translateX(-100%)
+  // z-index: 0
 
 .stacks-section:not(.active-section)
   transform: translateX(100%)
