update readme link, enable animation cause it\' cool

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -7,6 +7,9 @@ $stack-background: #f7f7f7
 $section-background: #f3f3f3
 $stack-card-radius: 5px
 
+html
+  overflow: hidden
+
 body
   user-select: none
   -khtml-user-select: none
